Fix alignment on status indicator icons

--- a/src/css/ui/components/status-indicator.css
+++ b/src/css/ui/components/status-indicator.css
@@ -17,13 +17,17 @@
   --c-size_status-indicator: 1.25rem;
   --c-size_status-indicator_icon: 0.875rem;
 
-  font-size: var(--c-size_status-indicator_icon);
   width: var(--c-size_status-indicator);
   height: var(--c-size_status-indicator);
   border-radius: calc(var(--c-size_status-indicator) / 2);
   display: inline-flex;
   align-items: center;
   justify-content: center;
+}
+
+.status-indicator .icon {
+  line-height: 1;
+  font-size: var(--c-size_status-indicator_icon);
 }
 
 .status-indicator.status-indicator_good {
